--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,127 @@
+.borders {
+    outline: 1px solid black;
+}
 
-  
+.visually-hidden {
+    position: absolute !important;
+	clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+	clip: rect(1px, 1px, 1px, 1px);
+	padding:0 !important;
+	border:0 !important;
+	height: 1px !important; 
+	width: 1px !important; 
+	overflow: hidden;
+}
 
-  
+.page {
+    font-family: 'Roboto', sans-serif;
+}
+
+h2 {
+    font-size: 55px;
+}
+
+.slider-item-info p {
+    font-size: 16px;
+    line-height: 24px;
+}
+
+.slide-1 {
+    background: url('../img/slide1.png') no-repeat center;
+}
+
+.slide-2 {
+    background: url('../img/slide2.png') no-repeat center;
+}
+
+.slide-3 {
+    background: url('../img/slide3.png') no-repeat center;
+}
+
+.button {
+    display: block;
+    text-decoration: none;
+    text-transform: uppercase;
+    text-align: center;
+    width: 240px;
+    height: 50px;
+    font: inherit;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Open Sans', sans-serif;
+    background-color: #fb565a;
+    color: white;
+    font-size: 16px;
+    line-height: 50px;
+}
+
+.slider-controls {
+    display: flex;
+}
+
+.switch-btn {
+    border: none;
+    font-size: 0px;
+    flex-basis: 30px;
+    height: 30px;
+    background: url('../img/radio-off.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.active {
+    border: none;
+    font-size: 0px;
+    flex-basis: 30px;
+    height: 30px;
+    background: url('../img/radio-on.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.advantages-item p {
+    font-size: 16px;
+}
+
+.red-rect {
+    display: block;
+    width: 280px;
+    height: 145px;
+    background: url('../img/illustration-1.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.red {
+    background-color: #fb565a;
+}
+
+.green-rect {
+    display: block;
+    width: 280px;
+    height: 145px;
+    background: url('../img/illustration-2.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.green {
+    background-color: #00ca74;
+}
+
+.yellow-rect {
+    display: block;
+    width: 280px;
+    height: 145px;
+    background: url('../img/illustration-3.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.yellow {
+    background-color: #efc849;
+}
+
+.statistic-card {
+    background: url('../img/nerds-illustration.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+}
