--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,7 @@
 }
 
 .page {
+    position: relative;
     font-family: 'Roboto', sans-serif;
     display: flex;
     flex-direction: column;
@@ -29,15 +30,17 @@
 .page-header {
     display: flex;
     flex-direction: row;
-    margin: 40px auto 0;
+    margin: 45px auto 0;
     height: 80px;
     padding: 0 20px;
 }
 
 .page-content {
-    margin: 0 auto;
+    margin: -10px auto;
     width: 1160px;
     padding: 0 20px;
+    display: flex;
+    flex-direction: column;
 }
 
 .grow-rect {
@@ -71,13 +74,13 @@ ul {
 
 .navigation-list {
     display: flex;
-    width: 440px;
-    justify-content: space-between;
-    margin: 0 auto;
+    width: 492px;
+    margin: 15px 203px;
 }
 
 .navigation-list li {
     height: 30px;
+    margin-right: 46px;
 }
 
 .navigation-list li a,
@@ -108,17 +111,45 @@ ul {
 }
 
 .basket {
-    align-items: flex-begin;
-    margin-bottom: 20px;
+    margin-bottom: 25px;
+    margin-left: -12px;
+}
+
+
+
+
+
+.basket li a {
+    position: relative;
+    padding-left: 50px;
+}
+
+.basket li a::before {
+    content: '';
+    position: absolute;
+    top: -7px;
+    left: 0px;
+    width: 30px;
+    height: 30px;
+    background: url('../img/cart-icon.svg') no-repeat center;
 }
 
 h2 {
     font-size: 55px;
 }
 
+.popap h2 {
+    padding: 0;
+    margin: 0;
+    margin-bottom: 45px;
+    font-size: 45px;
+}
+
 .slider {
     display: flex;
+    position: relative;
     height: 425px;
+    margin-top: -3px;
 }
 
 .slider-list {
@@ -134,24 +165,31 @@ h2 {
     display: flex;
     height: 100%;
     flex-direction: column;
-    justify-content: center;
     width: 520px;
 }
 
 .slider-item-info h2 {
-    margin: 0;
+    font-size: 55px;
+    font-weight: 800;
+    margin: 69px 0 -7px;
     line-height: 55px;
 }
 
 .slider-item-info p {
-    margin: 50px 0;
+    margin: 35px 0 40px;
+    font-size: 16px;
+    line-height: 24px;
+}
+
+.statistic-item p {
+    margin-top: 22px;
 }
 
 .slider-controls {
     position: absolute;
     display: flex;
-    left: 50%;
-    top: 430px;
+    left: 540px;
+    top: 310px;
     width: 90px;
     height: 30px;
 }
@@ -172,16 +210,7 @@ h2 {
 .slide-2,
 .slide-3 {
     background-position: right;
-}
-
-.basket li a::before {
-    content: '';
-    display: inline-block;
-    width: 30px;
-    height: 30px;
-    background: url('../img/cart-icon.svg') no-repeat;
-    background-position-y: 15px;
-    background-position-x: 0px;
+    background-position-y: -10px;
 }
 
 .button {
@@ -210,27 +239,27 @@ h2 {
 }
 
 .switch-btn {
-    border: none;
+    border-width: 0;
+    border-radius: 50%;
     font-size: 0px;
-    flex-basis: 30px;
-    height: 30px;
-    background: url('../img/radio-off.svg');
-    background-repeat: no-repeat;
-    background-position: center;
+    flex-basis: 20px;
+    height: 20px;
+    background-color: white;
+    margin-right: 10px;
 }
 
 .active {
-    border: none;
+    border-width: 0;
+    border-radius: 50%;
     font-size: 0px;
-    flex-basis: 30px;
-    height: 30px;
-    background: url('../img/radio-on.svg');
-    background-repeat: no-repeat;
-    background-position: center;
+    flex-basis: 20px;
+    height: 20px;
+    background-color: red;
 }
 
 .advantages {
     margin-top: 80px;
+    margin-bottom: 43px;
     width: 1100px;
 }
 
@@ -243,7 +272,7 @@ h2 {
 
 .advantages-item {
     display: flex;
-    width: 280px;
+    width: 300px;
     height: 100%;
     flex-direction: column;
     justify-content: flex-start;
@@ -258,7 +287,8 @@ h2 {
 
 .advantages-item p {
     font-size: 16px;
-    margin: 20px 0 30px;
+    line-height: 24px;
+    margin: 20px 20px 30px 0;
 }
 
 .red-rect {
@@ -315,26 +345,29 @@ h2 {
 .info-block {
     display: flex;
     justify-content: space-between;
-    height: 545px;
     width: 100%;
+    margin-bottom: 45px;
 }
 
 .info-block-text {
+    margin-top: 20px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    width: 660px;
+    width: 680px;
 }
 
 .info-block-text b {
+    margin-top: 13px;
+    margin-bottom: -5px;
     font-size: 45px;
     line-height: 45px;
+    font-weight: 800;
 }
 
 .info-block-text p {
     font-size: 16px;
     line-height: 24px;
-    margin: 40px 0 30px;
+    margin: 40px 0 22px;
 }
 
 .info-block-text h3 {
@@ -346,8 +379,8 @@ h2 {
 }
 
 .list-item {
-    margin-left: 50px;
-    margin-bottom: 30px;
+    margin-left: 38px;
+    margin-bottom: 33px;
 }
 
 .list-item::before {
@@ -363,9 +396,8 @@ h2 {
 .statistic-card {
     background: url('../img/nerds-illustration.jpg');
     background-repeat: no-repeat;
-    background-position-y: 40px;
+    background-position: top;
     width: 360px;
-    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -373,7 +405,7 @@ h2 {
 }
 
 .statistic-card h3 {
-    margin: 290px 0 50px;
+    margin: 243px 0 50px;
     font-size: 16px;
     line-height: 24px;
     font-weight: bold;
@@ -383,13 +415,13 @@ h2 {
 .statistic-list {
     display: flex;
     height: 30%;
+    margin-top: 5px;
 }
 
 .statistic-item {
     font-size: 16px;
     line-height: 18px;
-    width: 30%;
-    margin-right: 5px;
+    width: 33.333%;
 }
 
 .statistic-item span {
@@ -397,14 +429,23 @@ h2 {
     font-weight: bold;
 }
 
+.user-select span {
+    font-size: 18px;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
 .logo-list {
     display: flex;
+    justify-content: space-between;
 }
 
 .logo-item {
     opacity: 0.2;
     transition: 0.3s;
 }
+
+
 
 .logo-item:hover {
     opacity: 1;
@@ -420,14 +461,16 @@ h2 {
     align-items: center;
     align-self: center;
     width: 100%;
+    margin-bottom: 70px;
 }
 
 .map {
-    width: 1160px;
-    display: flex;
+    width: 1440px;
+    height: 415px;
     position: relative;
     flex-direction: column;
     margin-bottom: 65px;
+    overflow: hidden;
 }
 
 .map img:nth-child(2) {
@@ -440,7 +483,7 @@ h2 {
     width: 400px;
     height: 200px;
     position: absolute;
-    left: 532px;
+    left: 715px;
     top: 120px;
 }
 
@@ -449,13 +492,12 @@ h2 {
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    padding-left: 60px;
-    width: 330px;
-    height: 305px;
-    left: 20px;
-    top: 140px;
+    align-items: flex-start;
+    width: 320px;
+    left: 140px;
+    top: 51px;
     background-color: white;
+    padding: 35px 50px 45px;
 }
 
 .contact-info h3 {
@@ -463,7 +505,7 @@ h2 {
 }
 
 .contact-info a {
-    width: 200px;
+    width: 220px;
 }
 
 .tel {
@@ -474,6 +516,7 @@ h2 {
 .contact-info p {
     color: #666666;
     margin-top: 10px;
+    margin-bottom: 40px;
 }
 
 .social {
@@ -495,6 +538,16 @@ h2 {
     background-position: center;
     border-radius: 50%;
     margin-right: 10px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.social-item:hover {
+    background-color: #e74246;
+}
+
+.social-item:active {
+    background-color: #d7373b;
 }
 
 .social-item a {
@@ -518,8 +571,9 @@ h2 {
     padding: 0;
     font-size: 36px;
     font-weight: bold;
-    margin-top: 8px;
-    margin-left: 140px;
+    margin-top: 5px;
+    margin-left: 130px;
+    margin-bottom: 10px;
 }
 
 .friends p:nth-child(2) {
@@ -527,5 +581,383 @@ h2 {
     padding: 0;
     font-size: 16px;
     font-weight: bold;
-    margin-left: 140px;
+    margin-left: 130px;
+}
+
+
+/*------------------------------------------------------------------------------------*/
+
+.grow-rect-catalog {
+    box-sizing: border-box;
+    left: 0;
+    top: 0;
+    position: absolute;
+    width: 100%;
+    height: 360px;
+    background-color: #eeeeee;
+    z-index: -1;
+}
+
+.stretcher {
+    margin-bottom: 245px;
+}
+
+
+h1 {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 150px;
+    text-align: center;
+    font-size: 55px;
+    font-weight: bold;
+}
+
+.wrapper {
+    width: 1160px;
+    display: flex;
+    margin-top: 50px;
+}
+
+.catalog {
+    align-self: flex-end;
+    width: 760px;
+}
+
+
+.user-select {
+    width: 420px;
+    display: flex;
+    flex-direction: column;
+}
+
+.user-select ul {
+    margin-top: 20px;
+}
+
+.user-select li {
+    margin-bottom: 17px;
+}
+
+.popap label {
+    color: #283136;
+    font-size: 16px;
+    font-weight: bold;
+    margin: 0;
+    padding: 0;
+}
+
+.name-mail label {
+    padding: 0;
+    margin: 0;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.catalog-sort {
+    display: flex;
+    align-items: center;
+    margin-bottom: 50px;
+}
+
+.sorted-type {
+    display:flex;
+    width: 305px;
+    margin-left: auto;
+}
+
+.sorted-item a {
+    font-size: 14px;
+    text-transform: uppercase;
+}
+
+.catalog-sort span {
+    font-size: 18px;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.sorted-item {
+    margin-left: 10px;
+    opacity: 0.3;
+}
+
+.sorted-item:hover {
+    opacity: 0.6;
+}
+
+.sorted-item:active {
+    opacity: 1;
+}
+
+.sorted-arrow {
+    display: flex;
+    
+}
+
+.arrow-item a{
+    margin-left: 20px;
+    color: rgba(255, 255, 255, 0);
+}
+
+.arrow-up {
+    width: 30px;
+    height: 30px;
+    background: url("../img/icon-down-dir.svg") no-repeat center;
+}
+
+.arrow-down {
+    width: 30px;
+    height: 30px;
+    background: url("../img/icon-up-dir.svg") no-repeat center;
+}
+
+.arrow-item {
+    opacity: 0.3;
+    cursor: pointer;
+}
+
+.arrow-item:hover {
+    opacity: 0.6;
+}
+
+.arrow-item:active {
+    opacity: 1;
+}
+
+.enabled {
+    opacity: 1;
+}
+
+.template-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.template-item {
+    width: 360px;
+    position: relative;
+    margin-bottom: 35px;
+    padding: 0;
+    outline: none;
+    overflow: hidden;
+}
+
+.template-item::before {
+    content: '';
+    display: block;
+    width: 360px;
+    height: 45px;
+    background: url('../img/browser.svg') no-repeat center;
+    opacity: .12;
+}
+
+.template-item:focus::before {
+    opacity: 1;
+}
+
+
+
+.hiden {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    width: 100%;
+    height: 230px;
+    bottom: -150px;
+    background-color: #eee;
+    opacity: 0;
+    transition: 0.2s;
+}
+
+.visuality {
+    bottom: 0;
+    transition: opacity 1s linear;
+    transition: 0.3s;
+    opacity: 1;
+}
+
+.hiden b {
+    font-size: 18px;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.hiden p {
+    font-size: 16px;
+    line-height: 18px;
+    text-align: center;
+    color: #666666;
+    width: 70%;
+}
+
+.breadcrumbs {
+    display: flex;
+    width: 445;
+    height: 50px;
+    margin: 10px 0 50px;
+}
+
+.breadcrumbs-item {
+    width: 50px;
+    height: 50px;
+    background-color: #eeeeee;
+    border-radius: 5px;
+    color: black;
+    text-align: center;
+    font-size: 16px;
+    line-height: 50px;
+    margin-right: 10px;
+    cursor: pointer;
+}
+
+.breadcrumbs-item:hover {
+    background-color: #bfbfbf;
+}
+
+.breadcrumbs-item:active {
+    background-color: #d5d5d5;
+    color: #a8a8a8;
+}
+
+.next {
+    width: 260px;
+}
+
+.crumb-current {
+    box-sizing: border-box;
+    background-color: rgba(255, 255, 255, 0);
+    border-style: solid;
+    border-color: #eee;
+    border-width: 3px;
+}
+
+.cost {
+    text-transform: uppercase;
+    font-size: 18px;
+    font-weight: 700;
+    margin-bottom: 230px;
+}
+
+fieldset {
+    border: 0 none;
+}
+
+label {
+    position: relative;
+    cursor: pointer;
+    padding-left: 30px;
+}
+
+.grids-list label::before,
+.grids-list label::after {
+    content: '';
+    position: absolute;
+    top: -4px;
+    left: 0px;
+    width: 20px;
+    height: 20px;
+}
+
+.grids-list label::before {
+    background: url(../img/radio-off.png) no-repeat center;
+    background-size: 100%;
+}
+
+.grids-list input[type="radio"]:checked ~ label::after {
+    background: url(../img/radio-on.png) no-repeat center;
+    background-size: 100%;
+}
+
+.features-list label::before,
+.features-list label::after {
+    content: '';
+    position: absolute;
+    top: -4px;
+    left: 0px;
+    width: 20px;
+    height: 20px;
+}
+
+.features-list input[type="checkbox"] ~ label::after {
+    background: url(../img/checkbox-off.png) no-repeat center;
+    background-size: 100%;
+}
+
+.features-list input[type="checkbox"]:checked ~ label::after {
+    background: url(../img/checkbox-on.png) no-repeat center;
+    background-size: 100%;
+}
+
+
+
+
+
+.partners {
+    margin-bottom: 80px;
+}
+
+.overlay {
+    display: none;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.72);
+    z-index: 5;
+}
+
+.popap {
+    position: fixed;
+    box-sizing: border-box;
+    width: 960px;
+    display: none;
+    flex-direction: column;
+    padding: 70px 100px;
+    left: 50%;
+    bottom: 280px;
+    margin-left: -480px;
+    background-color: white;
+    z-index: 7;
+}
+
+.button-close-popap {
+    display: block;
+    position: absolute;
+    width: 21px;
+    height: 21px;
+    border: none;
+    right: 100px;
+    top: 80px;
+    background: none;
+}
+
+.name-mail {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 30px;
+}
+
+.name-mail input {
+    box-sizing: border-box;
+    width: 360px;
+    height: 50px;
+    outline: 3px solid #d7dcde;
+    border: none;
+    margin: 10px 0;
+    padding: 0 10px;
+}
+
+textarea {
+    box-sizing: border-box;
+    margin: 10px 0 50px;
+    width: 760px;
+    height: 115px;
+    border: none;
+    padding: 10px;
+    outline: 3px solid #d7dcde;
 }
